# BIND

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
include/: bind.h  bindreader.h  bindtypes.h  bindwriter.h  bufferhelper.h  bytebuffer.h  common.h
src/: bind.c  bindreader.c  bindtypes.c  bindwriter.c  bufferhelper.c  bytebuffer.c  bytebuffer.h  common.h
src/hashmap/: hashmap.c  hashmap.h
testing/: test_main.c
